# ComfyUI-Violet-Tools

./: .gitignore  CHANGELOG.md  EXAMPLES.md  LICENSE  README.md  __init__.py  aesthetic_alchemist.py  body_bard.py  encoding_enchantress.py  glamour_goddess.py  negativity_nullifier.py  persona_patcher.py  persona_preserver.py  pose_priestess.py  pyproject.toml  quality_queen.py  requirements.txt  scene_seductress.py  test_glamour_goddess.py  test_persona_flow.py
docs/: CHANGELOG.md  COLOR_PICKER_ENHANCEMENT.md  VERSIONING_GUIDE.md  comfyui-manager-entry.json
examples/: README.md
examples/sample-outputs/: README.md
examples/workflows/: README.md  violet-tools-2-workflow.json  violet-tools-basic-workflow.json
feature_lists/: aesthetic_alchemist.yaml  body_bard.yaml  body_features.yaml  glamour_goddess.yaml  negative_defaults.yaml  negativity_nullifier.yaml  pose_priestess.yaml  poses.yaml  qualities.yaml  quality_queen.yaml  scene_seductress.yaml  violet_colors.yaml
node_resources/: character_sync.py  mini-meta-mapper.py  prompt_consolidator.py  prompt_dedupe.py
node_resources/data/allowlists/: allowlist.txt  generic_drift.txt  media_tags.txt  weightable_tags.txt
node_resources/data/features/: feature_lists.yaml  modifiers.json
node_resources/data/maps/: alias_map.json
nodes/: aesthetic_alchemist.py  body_bard.py  character_cache.py  character_creator.py  character_curator.py  character_inspector.py  encoding_enchantress.py  essence_extractor.py  glamour_goddess.py  negativity_nullifier.py  oracle_override.py  pose_priestess.py  quality_queen.py  scene_seductress.py
utility_nodes/: save_siren.py
web/: palette.json  test.html  vt-colorchips-debug.js  vt-colorchips-simple.js  vt-colorchips.js  vt-node-styling-v2.js  vt-node-styling.js  vt-test.js
